--- a/VRChat/11/1319111.html
+++ b/VRChat/11/1319111.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2irSiq1HIfrg+Vbeb4Pu8NHuSfZ5ih6o8MNeBhrUZ+Y="></script>
+    "H/bS9rxnudebn57S5GFQ52gfD7i7fXzWlqMsMp1c6AQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ミケ(幸霊)】VerRefine_オリジナル3Dモデル","description":"【ミケ(幸霊)】VerRefine_オリジナル3Dモデルの商品紹介","url":"https://booth.pm/ja/items/1319111","offers":{"priceCurrency":"JPY","@type":"Offer","price":"20000"},"image":"https://booth.pximg.net/c/620x620/7250dbe0-9ae9-4e79-aaf5-d9d36bfb6df1/i/1319111/dc69be57-8de6-4417-aebd-97f9d66671a4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2irSiq1HIfrg+Vbeb4Pu8NHuSfZ5ih6o8MNeBhrUZ+Y="></script>
+    nonce="H/bS9rxnudebn57S5GFQ52gfD7i7fXzWlqMsMp1c6AQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -601,9 +601,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
