--- a/VRChat/26/1319026.html
+++ b/VRChat/26/1319026.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "k9dhl8YeNBtuLMryXEEvkqS50ra1kKK3wHdX5CNn5uc="></script>
+    "ZCVl/LSHCYDzb//7UXKD4q65edUSXDCsXQQnKE0GNas="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"しにがみさんのかま","description":"しにがみさんのかま　V1.0\n\nポリゴン数：△1184","url":"https://booth.pm/ja/items/1319026","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/60a161b7-c7bb-4fa2-8dc4-8ac298dd3e5f/i/1319026/a3fbb38a-944c-4483-8a5e-562c3663c4e5_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="k9dhl8YeNBtuLMryXEEvkqS50ra1kKK3wHdX5CNn5uc="></script>
+    nonce="ZCVl/LSHCYDzb//7UXKD4q65edUSXDCsXQQnKE0GNas="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -494,9 +494,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
