--- a/VRChat/39/1318739.html
+++ b/VRChat/39/1318739.html
@@ -78,7 +78,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/g9t3dAsS6O6dR6UKn6jBzRWMxAYanr2FtAgXIKWoCs="></script>
+    "Y6gquyho6pQJ6Rxwdy/cyDjnJjbULXU+aW5/KgISqJM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ただの光る棒","description":"ただの光る棒紹介文","url":"https://booth.pm/ja/items/1318739","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/0c747564-8274-4022-9ddd-8d9569e574a1/i/1318739/de60192c-982d-4fc7-b973-ebcdec5cfd1e_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/g9t3dAsS6O6dR6UKn6jBzRWMxAYanr2FtAgXIKWoCs="></script>
+    nonce="Y6gquyho6pQJ6Rxwdy/cyDjnJjbULXU+aW5/KgISqJM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -470,9 +470,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
