--- a/VRChat/61/1318061.html
+++ b/VRChat/61/1318061.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VTKbffhNHvNNdPitZZH72hnyX9hNMY2UZxqc1Gbdm48="></script>
+    "XQG2f1uFQWJkLf1eE5j9HPYCguMhRjtHdW82geefNiM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ClayDoll02【Noche】","description":"オリジナル3Dモデル ： ClayDoll02【ノーチェ】\nモデル製作者 ： ClayDoll\n利用規約　2019年4月12日作成\n\n\n【概要】\n・UnityのHumanoid形式に対応したオリジナル3Dモデルです。\n・スカートと髪にダイナミックボーンを使用しています。\n・Arktoon-shadersを使用しています。\n・Lipsync対応。\n・ポリゴン数 ： 24447　（CD02Full.fbx : 26929）\n・表情モーフ : 24 ( + Lipsync : 15 + VRM用モーフ : 12)\n\n\n【同梱ファイル】\n・使用テクスチャ (モデルに使用したテクスチャデータ)\n・UVテクスチャ (UV展開しただけのテクスチャデータ)\n・CD02.fbx （VRCモデル用に不要部を削除した3Dデータ）\n・CD02Full.fbx (見えない部分にもメッシュがある3Dデータ)\n・CD02.unitypackage (VRC用のパッケージ)\n\n\n【使い方】\n1.UnityProjectを作成します。\n\n2.Arktoon-shaders (https://booth.pm/ja/items/1027997)をダウンロードしてImportします\n\n3.VRCSDK（無料）をダウンロードしてImportします。\n\n4.DynamicBone（有料）をImportします。（無くてもOK）。\n\n5.当ファイルに同梱されているCD02.UnityPackageをImportします。\n\n6.Project内のCD02 PrefabをHierarchyにドラッグ＆ドロップします。\n\n7.MenuのVRChatSDK \u003e Show Build Control Panelでアップロードします。\n\n\n【免責事項】\n・本モデルを利用した時点で本利用規約に同意したものとします。\n・作成者は、本データに関していかなる保証も行いません。\n・このモデルを使用して発生したいかなる損害・損失・トラブル・その他の不利益に対して当方は一切責任を持ちません。\n・この利用規約は予告なく変更される場合があることをご了承ください。\n\n【許可事項】\n・このモデルの個人利用及び商用利用。\n・このモデルの無改変および改変利用。\n・動画・自主制作ゲーム・VRChat等、ご自由にお使いください。\n\n【禁止事項】\n・このモデルを改変の有無を問わず再配布する行為。\n・このモデルの一部を使用したデータを再配布する行為。\n・このモデルを用いた公序良俗に違反する行為。\n・政治的目的・誹謗中傷目的などで使用する行為。\n・このモデルの製作者を騙る行為。\n\n\n【使用させていただいた素材】\n・Arktoon-Shaders(synqark様)\n","url":"https://booth.pm/ja/items/1318061","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/ebfe3cfc-08d0-4ca0-ae3e-ccdfe89316ed/i/1318061/6cbc3a2e-4248-435e-9979-ca66969c0d27_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VTKbffhNHvNNdPitZZH72hnyX9hNMY2UZxqc1Gbdm48="></script>
+    nonce="XQG2f1uFQWJkLf1eE5j9HPYCguMhRjtHdW82geefNiM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -450,9 +450,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
