--- a/VRChat/56/1316856.html
+++ b/VRChat/56/1316856.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FaC/Plx/EfKNwaQVsvuAi6Ef4mOfCx7dp1rp9Vws25M="></script>
+    "THQMMS8LKWA/IJpe829JcQRNIzokn/yBBM2ZzvIBGVA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル「REXY」","description":"オリジナル３Ｄアバター　「ＲＥＸＹ」\n\nVRChat 配布・試着ワールド　FLAFLA avatar world\n⇓\nvrchat://launch?ref=vrchat.com\u0026id=wrld_d5f12db4-6b8e-43ff-82f6-61bd23eb2966:70774~private(usr_acc2eccb-521f-488e-96a3-c667daa35fa4)~nonce(71d6e993-d47a-41e7-bc98-4e6bde136a97)~canRequestInvite\n\n〇概要\n 　\n　　・三角ポリゴン数 ：本体　約28000ポリゴン\n　　・Lip Sync ：VRChat対応 15種 \n\n〇配布データ\n \n　　・Rexy.fbx\n　　　REXYの3Dモデルデータ\n　　　上から4つ入っている瞬きシェイプキーはダミーです。\n\n　　・Rexy tex.png\n　　　REXYのテクスチャ画像データ\n\n　　・Rexy UV.png\n　　　REXYのUV配置画像データ  \n\n　　・README.txt\n　　　利用規約が記載されているテキストデータ\n\n〇利用規約\n　　①当データはFLAFLA27の著作権物です。\n　　　権利者を偽って無断で配布することを禁じます。\n\n　　②当データ、改変データを無断で有償販売、有償改造をすることを禁じます。\n\n　　③営利利用可\n　　　ゲーム、アプリケーション、動画、配信などにご使用いただけます。\n　\n　　④R-18, R-18Gでの利用可\n\n　　⑤データ改変可\n　　　当データに付属しているデータの改変・パーツ流用は自由です。\n\n　　⑥当データ、改変データ自体の再配布は禁止します。\n\n　　⑦動画、ゲームでの当データ利用時に作者のクレジットの記載、\n　　　”REXY”の名称を使用する必要はありません。\n\n　　⑧公序良俗に反する行為や目的、政治, 宗教活動、他者に対する誹謗中傷目的での利用禁止\n\n〇免責事項\n　当データのご利用により、万一ご利用者様に何らかの不具合、損害が発生したとしても、\n　何らの責任を負うものではありません。\n\nよければm(_ _)m\nhttps://www.amazon.jp/hz/wishlist/ls/3ONLMC9ZX94G?ref_=wl_share\n\n","url":"https://booth.pm/ja/items/1316856","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/cf30cb51-a3e9-4027-8c43-51eb2cad736c/i/1316856/52f2f7bd-4adc-457a-996f-e99214dd1d8c_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FaC/Plx/EfKNwaQVsvuAi6Ef4mOfCx7dp1rp9Vws25M="></script>
+    nonce="THQMMS8LKWA/IJpe829JcQRNIzokn/yBBM2ZzvIBGVA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -407,9 +407,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
