--- a/VRChat/03/1318403.html
+++ b/VRChat/03/1318403.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mn1/iCDz8gjV8H+7LpUSNe3Bu7eK6S5HTXjgrl88LAM="></script>
+    "AYrfiXXc8+/hpMGRBgGatc+l5dlQMcErx6zIo7VmlgY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"値札","description":"【値札】\n\n　VRChat向け・小物アイテム\n\n　ポリゴン数\n　　値札：252\n　　値札シール：116\n\n【内容】\n\n　■readme.txt\n\n　■値札.unitypackage\n　　→値札モデル、値札シールモデルとそれぞれのテクスチャ、マテリアル\n\n　■モデル・テクスチャ改造用フォルダ\n　　□値札.fbx\n　　□値札.png\n　　□値札_猫.png\n　　□値札(UV).png\n　　□値札シール.fbx\n　　□値札シール.png\n　　□値札シール(UV).png\n\n\n【テクスチャ改変について】\n　値札モデルは枠内で裏表同じ形で設定いただければ、\n　マテリアル側で空白部分は透明にできるので、\n　お好きな形の値札をテクスチャ改変のみで作成可能です。\n\n\n【ボーンについて】\n　「値札」には値札と商品をつなぐ部分にはボーンが設定されています。\n　ダイナミックボーンの設定を行なえは動きに合わせて値札を揺らすことも可能です。\n\n　「値札シール」には曲面に合わせるようのボーンが設定されています。\n　ご利用個所に合わせて微調整用にご利用ください。\n\n\n【使用方法】\n　Unityに値札.unitypackageをimportしてください。\n　値札をアバターにセットしご利用ください。\n\n\n【※注意事項】\n　・このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n　・改変等はご自由にどうぞ！\n　・製作者を騙ることを禁止します。\n　・モデルの再配布を禁止します。\n　・良識の範囲でのご使用をお願い致します。\n　・予告なく規約変更、配布停止、使用禁止にする事があります。\n\n\n制作者:土司空〈DOSHIKU〉\nhttps://twitter.com/airgaogao \n\nご不明な点、バグなどございましたらご連絡いただけますと幸いです。\n\n2019.04.15　販売開始\n","url":"https://booth.pm/ja/items/1318403","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/e201f4f8-6bc0-4319-ac66-863763d14127/i/1318403/be7705e0-3176-49ea-94e6-cada8c49ac3c_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mn1/iCDz8gjV8H+7LpUSNe3Bu7eK6S5HTXjgrl88LAM="></script>
+    nonce="AYrfiXXc8+/hpMGRBgGatc+l5dlQMcErx6zIo7VmlgY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -454,9 +454,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
