--- a/VRChat/38/1318038.html
+++ b/VRChat/38/1318038.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "H7dViZm29xbS5q/XSWjYUDlBkW5tCMCJigJI4984afw="></script>
+    "XOwzlFVtdAh6sVHh0HepUiWNROrB/Gfw4Y3MaoX72l0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"NPL10 Pistol Flashlight","description":"NITECORE® NPL10 Pistol Flashlight\n\n[Polygon]\nFaces - 3478\nTris  - 6778\n\n[Texture]\n-Basement\n-Metallic\n-Normal\n\n1024x1024\n2048x2048\n\n[File]\nNITECORE_NPL10.unitypackage\n(7,489KB)\n\n[Email]\nphecrys@gmail.com\n\n-----\n\nThx 4 watch my model\n","url":"https://booth.pm/ja/items/1318038","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/4a1c1edc-9b81-4a0c-9a1f-0a5af94b8e1a/i/1318038/16e73296-b468-496e-b531-2e746f6c095d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="H7dViZm29xbS5q/XSWjYUDlBkW5tCMCJigJI4984afw="></script>
+    nonce="XOwzlFVtdAh6sVHh0HepUiWNROrB/Gfw4Y3MaoX72l0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -480,9 +480,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
