--- a/VRChat/82/1317682.html
+++ b/VRChat/82/1317682.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kuBzDtwK4hDIKtt2FPVO/TiEWBgWNZ3nW3OeodZ9cHQ="></script>
+    "xsm9eGWw/X/kM0pN3O6I3Lmzr92ChWbb5lvlD3yEMxM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【INGY Scythe】fbxモデル","description":"かっこいい鎌です。\n５色用意しました。\nunitypackageをインポートしてお使いください。","url":"https://booth.pm/ja/items/1317682","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/d0287a31-78e9-429d-804d-e3582e9dc539/i/1317682/ed2d057a-e2d0-4865-8754-4ab3d48bca93_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kuBzDtwK4hDIKtt2FPVO/TiEWBgWNZ3nW3OeodZ9cHQ="></script>
+    nonce="xsm9eGWw/X/kM0pN3O6I3Lmzr92ChWbb5lvlD3yEMxM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -495,9 +495,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
