--- a/VRChat/06/1317706.html
+++ b/VRChat/06/1317706.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "l2QeG9uHbmizjurMGJZbZXMS3/XZDsEzbZJ5x8IxWgA="></script>
+    "cOOo8AER6fy5Hq+ude6DjzmWtHd0R/druKbYMyI3TlU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あすかろ式ぐんそー","description":"あすかろ様（@ascaro001）（https://ascaro.booth.pm/）製作のVRChat向け３Dモデルです。許可を頂いてこちらでの配布をしています。\n\nhumanoidアバターモデル（フルトラ非対応）が１体、genericアバターモデルが１体入っています。\n同梱されている規約をよくお読みの上ご利用ください。\n\n設定済みunitypackageを同梱しておりますのですぐにお迎えできます。\n※当モデルはunityアセットのDynamic Bone使用を想定しています。\n\n----内容物----\nテクスチャデータ\nfbxファイル\nunitypackageファイル\n規約テキストファイル\n--------------","url":"https://booth.pm/ja/items/1317706","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b5f9e3c4-c04c-4e1e-85ab-dbc77853e6a0/i/1317706/b9ab5476-86ed-40a6-8487-255852dcab0b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="l2QeG9uHbmizjurMGJZbZXMS3/XZDsEzbZJ5x8IxWgA="></script>
+    nonce="cOOo8AER6fy5Hq+ude6DjzmWtHd0R/druKbYMyI3TlU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -342,9 +342,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
