--- a/VRChat/72/1317272.html
+++ b/VRChat/72/1317272.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yswj+6H6D74bEloESWsHc/uOCPw6m8ZQKVzdYJLpmPA="></script>
+    "orUY637uRXp2DoDC3nYBW6b4lnpuh6Ht2r2GXzEPzM0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat用】Kawaii Motion Vol.1 @fuwari_mimf","description":"KawaiiMotion_vol1はかわいいアニメーションデータ8種類詰め合わせパックです。","url":"https://booth.pm/ja/items/1317272","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/820803da-20fe-46dd-b376-9e7cf8f2afcc/i/1317272/cd4394a0-40f5-4ac2-a061-b4fabd2d8361_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yswj+6H6D74bEloESWsHc/uOCPw6m8ZQKVzdYJLpmPA="></script>
+    nonce="orUY637uRXp2DoDC3nYBW6b4lnpuh6Ht2r2GXzEPzM0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -431,9 +431,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
